- Add auto configured JVM props - Add dummy wrapper script for one click install for Presto - Could test with Presto 277