@@ -1,8 +1,14 @@
 -server
--Xmx16G
+-Xmx${JVM_XMX}
+-Xms${JVM_XMX}
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
+-XX:+UseGCOverheadLimit
+-XX:-UseBiasedLocking
+-XX:ReservedCodeCacheSize=256M
+-Djdk.nio.maxCachedBufferSize=2000000
+-Djdk.attach.allowAttachSelf=true
